@@ -1,6 +1,7 @@
 Revision history for Perl application Wx::Demo.
 
 0.18  TBR
+    - Added Wx::TreeEvent::GetKeyEvent example
 
 0.17  Thu May 31 2012
     - Added Wx::PrintPaperDatabase
